cbits/skia_capi/sk_types.h

typedef struct {
    float left;
    float top;
    float right;
    float bottom;
} sk_rect_t;
/**
    A sk_paint_t holds the style and color information about how to
    draw geometries, text and bitmaps.
*/
typedef struct sk_paint_t sk_paint_t;
typedef struct sk_imagefilter_t sk_imagefilter_t;
typedef enum {
  FLOAT_SK_RUNTIMEEFFECT_UNIFORM_TYPE,
  FLOAT2_SK_RUNTIMEEFFECT_UNIFORM_TYPE,
  FLOAT3_SK_RUNTIMEEFFECT_UNIFORM_TYPE,
  FLOAT4_SK_RUNTIMEEFFECT_UNIFORM_TYPE,
  FLOAT2X2_SK_RUNTIMEEFFECT_UNIFORM_TYPE,
  FLOAT3X3_SK_RUNTIMEEFFECT_UNIFORM_TYPE,
  FLOAT4X4_SK_RUNTIMEEFFECT_UNIFORM_TYPE,
  INT_SK_RUNTIMEEFFECT_UNIFORM_TYPE,
  INT2_SK_RUNTIMEEFFECT_UNIFORM_TYPE,
  INT3_SK_RUNTIMEEFFECT_UNIFORM_TYPE,
  INT4_SK_RUNTIMEEFFECT_UNIFORM_TYPE,
} sk_runtimeeffect_uniform_type_t;
typedef enum {
  SHADER_SK_RUNTIMEEFFECT_CHILD_TYPE,
  COLOR_FILTER_SK_RUNTIMEEFFECT_CHILD_TYPE,
  BLENDER_SK_RUNTIMEEFFECT_CHILD_TYPE,
} sk_runtimeeffect_child_type_t;
typedef enum {
  NONE_SK_RUNTIMEEFFECT_UNIFORM_FLAGS = 0x00,
  ARRAY_SK_RUNTIMEEFFECT_UNIFORM_FLAGS = 0x01,
  COLOR_SK_RUNTIMEEFFECT_UNIFORM_FLAGS = 0x02,
  VERTEX_SK_RUNTIMEEFFECT_UNIFORM_FLAGS = 0x04,
  FRAGMENT_SK_RUNTIMEEFFECT_UNIFORM_FLAGS = 0x08,
  HALF_PRECISION_SK_RUNTIMEEFFECT_UNIFORM_FLAGS = 0x10,
} sk_runtimeeffect_uniform_flags_t;
typedef struct {
  const char* fName;
  size_t fNameLength;
  size_t fOffset;
  sk_runtimeeffect_uniform_type_t fType;
  int fCount;
  sk_runtimeeffect_uniform_flags_t fFlags;
} sk_runtimeeffect_uniform_t;
typedef struct {
  const char* fName;
  size_t fNameLength;
  sk_runtimeeffect_child_type_t fType;
  int fIndex;
} sk_runtimeeffect_child_t;
typedef enum {
  NEAREST_SK_FILTER_MODE,
  LINEAR_SK_FILTER_MODE,
} sk_filter_mode_t;
typedef enum {
  NONE_SK_MIPMAP_MODE,
  NEAREST_SK_MIPMAP_MODE,
  LINEAR_SK_MIPMAP_MODE,
} sk_mipmap_mode_t;
typedef struct {
  float fB;
  float fC;
} sk_cubic_resampler_t;
typedef struct {
  int fMaxAniso;
  bool fUseCubic;
  sk_cubic_resampler_t fCubic;
  sk_filter_mode_t fFilter;
  sk_mipmap_mode_t fMipmap;
} sk_sampling_options_t;
typedef enum {
  NONE_SK_CANVAS_SAVELAYERREC_FLAGS = 0,
  PRESERVE_LCD_TEXT_SK_CANVAS_SAVELAYERREC_FLAGS = 1 << 1,
  INITIALIZE_WITH_PREVIOUS_SK_CANVAS_SAVELAYERREC_FLAGS = 1 << 2,
  F16_COLOR_TYPE_SK_CANVAS_SAVELAYERREC_FLAGS = 1 << 4,
} sk_canvas_savelayerrec_flags_t;
typedef struct {
  sk_rect_t* fBounds;
  sk_paint_t* fPaint;
  sk_imagefilter_t* fBackdrop;
  sk_canvas_savelayerrec_flags_t fFlags;
} sk_canvas_savelayerrec_t;