src/Skia/Bindings/Types.hsc


@
typedef struct 
{
  const char *fName;
  size_t fNameLength;
  size_t fOffset;
  sk_runtimeeffect_uniform_type_t fType;
  int fCount;
  sk_runtimeeffect_uniform_flags_t fFlags;
} sk_runtimeeffect_uniform_t
@
-}
data Sk_runtimeeffect_uniform = Sk_runtimeeffect_uniform
  { fName :: Ptr (CChar) -- ^ C field: @"const char *fName"@
  , fNameLength :: CSize -- ^ C field: @"size_t fNameLength"@
  , fOffset :: CSize -- ^ C field: @"size_t fOffset"@
  , fType :: Sk_runtimeeffect_uniform_type -- ^ C field: @"sk_runtimeeffect_uniform_type_t fType"@
  , fCount :: CInt -- ^ C field: @"int fCount"@
  , fFlags :: Sk_runtimeeffect_uniform_flags -- ^ C field: @"sk_runtimeeffect_uniform_flags_t fFlags"@
  }
instance Foreign.Storable.Offset.Offset "fName" Sk_runtimeeffect_uniform where
  rawOffset = (#offset sk_runtimeeffect_uniform_t, fName)
instance Foreign.Storable.Offset.Offset "fNameLength" Sk_runtimeeffect_uniform where
  rawOffset = (#offset sk_runtimeeffect_uniform_t, fNameLength)
instance Foreign.Storable.Offset.Offset "fOffset" Sk_runtimeeffect_uniform where
  rawOffset = (#offset sk_runtimeeffect_uniform_t, fOffset)
instance Foreign.Storable.Offset.Offset "fType" Sk_runtimeeffect_uniform where
  rawOffset = (#offset sk_runtimeeffect_uniform_t, fType)
instance Foreign.Storable.Offset.Offset "fCount" Sk_runtimeeffect_uniform where
  rawOffset = (#offset sk_runtimeeffect_uniform_t, fCount)
instance Foreign.Storable.Offset.Offset "fFlags" Sk_runtimeeffect_uniform where
  rawOffset = (#offset sk_runtimeeffect_uniform_t, fFlags)
instance Foreign.Storable.Storable Sk_runtimeeffect_uniform where
  sizeOf _ = (#size sk_runtimeeffect_uniform_t)
  alignment _ = (#alignment sk_runtimeeffect_uniform_t)
  peek p' = do
    fName <- (#peek sk_runtimeeffect_uniform_t, fName) p'
    fNameLength <- (#peek sk_runtimeeffect_uniform_t, fNameLength) p'
    fOffset <- (#peek sk_runtimeeffect_uniform_t, fOffset) p'
    fType <- (#peek sk_runtimeeffect_uniform_t, fType) p'
    fCount <- (#peek sk_runtimeeffect_uniform_t, fCount) p'
    fFlags <- (#peek sk_runtimeeffect_uniform_t, fFlags) p'
    pure Sk_runtimeeffect_uniform{..}
  poke p' Sk_runtimeeffect_uniform{..} = do
    (#poke sk_runtimeeffect_uniform_t, fName) p' fName
    (#poke sk_runtimeeffect_uniform_t, fNameLength) p' fNameLength
    (#poke sk_runtimeeffect_uniform_t, fOffset) p' fOffset
    (#poke sk_runtimeeffect_uniform_t, fType) p' fType
    (#poke sk_runtimeeffect_uniform_t, fCount) p' fCount
    (#poke sk_runtimeeffect_uniform_t, fFlags) p' fFlags

{- | C struct: @"sk_runtimeeffect_child_t"@

@
typedef struct 
{
  const char *fName;
  size_t fNameLength;
  sk_runtimeeffect_child_type_t fType;
  int fIndex;
} sk_runtimeeffect_child_t
@
-}
data Sk_runtimeeffect_child = Sk_runtimeeffect_child
  { fName :: Ptr (CChar) -- ^ C field: @"const char *fName"@
  , fNameLength :: CSize -- ^ C field: @"size_t fNameLength"@
  , fType :: Sk_runtimeeffect_child_type -- ^ C field: @"sk_runtimeeffect_child_type_t fType"@
  , fIndex :: CInt -- ^ C field: @"int fIndex"@
  }
instance Foreign.Storable.Offset.Offset "fName" Sk_runtimeeffect_child where
  rawOffset = (#offset sk_runtimeeffect_child_t, fName)
instance Foreign.Storable.Offset.Offset "fNameLength" Sk_runtimeeffect_child where
  rawOffset = (#offset sk_runtimeeffect_child_t, fNameLength)
instance Foreign.Storable.Offset.Offset "fType" Sk_runtimeeffect_child where
  rawOffset = (#offset sk_runtimeeffect_child_t, fType)
instance Foreign.Storable.Offset.Offset "fIndex" Sk_runtimeeffect_child where
  rawOffset = (#offset sk_runtimeeffect_child_t, fIndex)
instance Foreign.Storable.Storable Sk_runtimeeffect_child where
  sizeOf _ = (#size sk_runtimeeffect_child_t)
  alignment _ = (#alignment sk_runtimeeffect_child_t)
  peek p' = do
    fName <- (#peek sk_runtimeeffect_child_t, fName) p'
    fNameLength <- (#peek sk_runtimeeffect_child_t, fNameLength) p'
    fType <- (#peek sk_runtimeeffect_child_t, fType) p'
    fIndex <- (#peek sk_runtimeeffect_child_t, fIndex) p'
    pure Sk_runtimeeffect_child{..}
  poke p' Sk_runtimeeffect_child{..} = do
    (#poke sk_runtimeeffect_child_t, fName) p' fName
    (#poke sk_runtimeeffect_child_t, fNameLength) p' fNameLength
    (#poke sk_runtimeeffect_child_t, fType) p' fType
    (#poke sk_runtimeeffect_child_t, fIndex) p' fIndex

{- | C enum: @"sk_filter_mode_t"@

@
typedef enum 
{
  NEAREST_SK_FILTER_MODE,
  LINEAR_SK_FILTER_MODE
} sk_filter_mode_t
@

-}
newtype Sk_filter_mode = Sk_filter_mode (#type sk_filter_mode_t)
  deriving stock (Show, Eq, Ord)
  deriving newtype (Num, Bits, Storable)

-- | C enum @"sk_filter_mode_t"@ value (1/2): @"NEAREST_SK_FILTER_MODE"@
pattern NEAREST_SK_FILTER_MODE :: Sk_filter_mode
pattern NEAREST_SK_FILTER_MODE = (#const NEAREST_SK_FILTER_MODE)

-- | C enum @"sk_filter_mode_t"@ value (2/2): @"LINEAR_SK_FILTER_MODE"@
pattern LINEAR_SK_FILTER_MODE :: Sk_filter_mode
pattern LINEAR_SK_FILTER_MODE = (#const LINEAR_SK_FILTER_MODE)

{- | C enum: @"sk_mipmap_mode_t"@

@
typedef enum 
{
  NONE_SK_MIPMAP_MODE,
  NEAREST_SK_MIPMAP_MODE,
  LINEAR_SK_MIPMAP_MODE
} sk_mipmap_mode_t
@

-}
newtype Sk_mipmap_mode = Sk_mipmap_mode (#type sk_mipmap_mode_t)
  deriving stock (Show, Eq, Ord)
  deriving newtype (Num, Bits, Storable)

-- | C enum @"sk_mipmap_mode_t"@ value (1/3): @"NONE_SK_MIPMAP_MODE"@
pattern NONE_SK_MIPMAP_MODE :: Sk_mipmap_mode
pattern NONE_SK_MIPMAP_MODE = (#const NONE_SK_MIPMAP_MODE)

-- | C enum @"sk_mipmap_mode_t"@ value (2/3): @"NEAREST_SK_MIPMAP_MODE"@
pattern NEAREST_SK_MIPMAP_MODE :: Sk_mipmap_mode
pattern NEAREST_SK_MIPMAP_MODE = (#const NEAREST_SK_MIPMAP_MODE)

-- | C enum @"sk_mipmap_mode_t"@ value (3/3): @"LINEAR_SK_MIPMAP_MODE"@
pattern LINEAR_SK_MIPMAP_MODE :: Sk_mipmap_mode
pattern LINEAR_SK_MIPMAP_MODE = (#const LINEAR_SK_MIPMAP_MODE)

{- | C struct: @"sk_cubic_resampler_t"@

@
typedef struct 
{
  float fB;
  float fC;
} sk_cubic_resampler_t
@
-}
data Sk_cubic_resampler = Sk_cubic_resampler
  { fB :: CFloat -- ^ C field: @"float fB"@
  , fC :: CFloat -- ^ C field: @"float fC"@
  }
instance Foreign.Storable.Offset.Offset "fB" Sk_cubic_resampler where
  rawOffset = (#offset sk_cubic_resampler_t, fB)
instance Foreign.Storable.Offset.Offset "fC" Sk_cubic_resampler where
  rawOffset = (#offset sk_cubic_resampler_t, fC)
instance Foreign.Storable.Storable Sk_cubic_resampler where
  sizeOf _ = (#size sk_cubic_resampler_t)
  alignment _ = (#alignment sk_cubic_resampler_t)
  peek p' = do
    fB <- (#peek sk_cubic_resampler_t, fB) p'
    fC <- (#peek sk_cubic_resampler_t, fC) p'
    pure Sk_cubic_resampler{..}
  poke p' Sk_cubic_resampler{..} = do
    (#poke sk_cubic_resampler_t, fB) p' fB
    (#poke sk_cubic_resampler_t, fC) p' fC

{- | C struct: @"sk_sampling_options_t"@

@
typedef struct 
{
  int fMaxAniso;
  _Bool fUseCubic;
  sk_cubic_resampler_t fCubic;
  sk_filter_mode_t fFilter;
  sk_mipmap_mode_t fMipmap;
} sk_sampling_options_t
@
-}
data Sk_sampling_options = Sk_sampling_options
  { fMaxAniso :: CInt -- ^ C field: @"int fMaxAniso"@
  , fUseCubic :: CBool -- ^ C field: @"_Bool fUseCubic"@
  , fCubic :: Sk_cubic_resampler -- ^ C field: @"sk_cubic_resampler_t fCubic"@
  , fFilter :: Sk_filter_mode -- ^ C field: @"sk_filter_mode_t fFilter"@
  , fMipmap :: Sk_mipmap_mode -- ^ C field: @"sk_mipmap_mode_t fMipmap"@
  }
instance Foreign.Storable.Offset.Offset "fMaxAniso" Sk_sampling_options where
  rawOffset = (#offset sk_sampling_options_t, fMaxAniso)
instance Foreign.Storable.Offset.Offset "fUseCubic" Sk_sampling_options where
  rawOffset = (#offset sk_sampling_options_t, fUseCubic)
instance Foreign.Storable.Offset.Offset "fCubic" Sk_sampling_options where
  rawOffset = (#offset sk_sampling_options_t, fCubic)
instance Foreign.Storable.Offset.Offset "fFilter" Sk_sampling_options where
  rawOffset = (#offset sk_sampling_options_t, fFilter)
instance Foreign.Storable.Offset.Offset "fMipmap" Sk_sampling_options where
  rawOffset = (#offset sk_sampling_options_t, fMipmap)
instance Foreign.Storable.Storable Sk_sampling_options where
  sizeOf _ = (#size sk_sampling_options_t)
  alignment _ = (#alignment sk_sampling_options_t)
  peek p' = do
    fMaxAniso <- (#peek sk_sampling_options_t, fMaxAniso) p'
    fUseCubic <- (#peek sk_sampling_options_t, fUseCubic) p'
    fCubic <- (#peek sk_sampling_options_t, fCubic) p'
    fFilter <- (#peek sk_sampling_options_t, fFilter) p'
    fMipmap <- (#peek sk_sampling_options_t, fMipmap) p'
    pure Sk_sampling_options{..}
  poke p' Sk_sampling_options{..} = do
    (#poke sk_sampling_options_t, fMaxAniso) p' fMaxAniso
    (#poke sk_sampling_options_t, fUseCubic) p' fUseCubic
    (#poke sk_sampling_options_t, fCubic) p' fCubic
    (#poke sk_sampling_options_t, fFilter) p' fFilter
    (#poke sk_sampling_options_t, fMipmap) p' fMipmap

{- | C enum: @"sk_canvas_savelayerrec_flags_t"@

@
typedef enum 
{
  NONE_SK_CANVAS_SAVELAYERREC_FLAGS = 0,
  PRESERVE_LCD_TEXT_SK_CANVAS_SAVELAYERREC_FLAGS = 1 << 1,
  INITIALIZE_WITH_PREVIOUS_SK_CANVAS_SAVELAYERREC_FLAGS = 1 << 2,
  F16_COLOR_TYPE_SK_CANVAS_SAVELAYERREC_FLAGS = 1 << 4
} sk_canvas_savelayerrec_flags_t
@

-}
newtype Sk_canvas_savelayerrec_flags = Sk_canvas_savelayerrec_flags (#type sk_canvas_savelayerrec_flags_t)
  deriving stock (Show, Eq, Ord)
  deriving newtype (Num, Bits, Storable)

-- | C enum @"sk_canvas_savelayerrec_flags_t"@ value (1/4): @"NONE_SK_CANVAS_SAVELAYERREC_FLAGS"@
pattern NONE_SK_CANVAS_SAVELAYERREC_FLAGS :: Sk_canvas_savelayerrec_flags
pattern NONE_SK_CANVAS_SAVELAYERREC_FLAGS = (#const NONE_SK_CANVAS_SAVELAYERREC_FLAGS)

-- | C enum @"sk_canvas_savelayerrec_flags_t"@ value (2/4): @"PRESERVE_LCD_TEXT_SK_CANVAS_SAVELAYERREC_FLAGS"@
pattern PRESERVE_LCD_TEXT_SK_CANVAS_SAVELAYERREC_FLAGS :: Sk_canvas_savelayerrec_flags
pattern PRESERVE_LCD_TEXT_SK_CANVAS_SAVELAYERREC_FLAGS = (#const PRESERVE_LCD_TEXT_SK_CANVAS_SAVELAYERREC_FLAGS)

-- | C enum @"sk_canvas_savelayerrec_flags_t"@ value (3/4): @"INITIALIZE_WITH_PREVIOUS_SK_CANVAS_SAVELAYERREC_FLAGS"@
pattern INITIALIZE_WITH_PREVIOUS_SK_CANVAS_SAVELAYERREC_FLAGS :: Sk_canvas_savelayerrec_flags
pattern INITIALIZE_WITH_PREVIOUS_SK_CANVAS_SAVELAYERREC_FLAGS = (#const INITIALIZE_WITH_PREVIOUS_SK_CANVAS_SAVELAYERREC_FLAGS)

-- | C enum @"sk_canvas_savelayerrec_flags_t"@ value (4/4): @"F16_COLOR_TYPE_SK_CANVAS_SAVELAYERREC_FLAGS"@
pattern F16_COLOR_TYPE_SK_CANVAS_SAVELAYERREC_FLAGS :: Sk_canvas_savelayerrec_flags
pattern F16_COLOR_TYPE_SK_CANVAS_SAVELAYERREC_FLAGS = (#const F16_COLOR_TYPE_SK_CANVAS_SAVELAYERREC_FLAGS)

{- | C struct: @"sk_canvas_savelayerrec_t"@
